@@ -1,23 +1,22 @@
+import io.vavr.collection.List;
+import io.vavr.collection.Seq;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import people.Person;
 import people.Pet;
 import people.PetType;
 
-import java.util.Arrays;
-import java.util.List;
-
+import static java.lang.Integer.MAX_VALUE;
 import static java.lang.String.format;
 import static java.lang.System.lineSeparator;
-import static java.util.Comparator.comparingInt;
 import static org.assertj.core.api.Assertions.assertThat;
 
-class PopulationTests {
-    private static List<Person> population;
+class PopulationWithVavrTests {
+    private static Seq<Person> population;
 
     @BeforeAll
     static void setup() {
-        population = Arrays.asList(
+        population = List.of(
                 new Person("Peter", "Griffin")
                         .addPet(PetType.CAT, "Tabby", 2),
                 new Person("Stewie", "Griffin")
@@ -40,9 +39,7 @@ class PopulationTests {
 
     @Test
     void peopleWithTheirPets() {
-        final var response = formatPopulation();
-
-        assertThat(response)
+        assertThat(formatPopulation())
                 .hasToString("Peter Griffin who owns : Tabby " + lineSeparator() +
                         "Stewie Griffin who owns : Dolly Brian " + lineSeparator() +
                         "Joe Swanson who owns : Spike " + lineSeparator() +
@@ -53,42 +50,36 @@ class PopulationTests {
                         "Glenn Quagmire");
     }
 
-    private static StringBuilder formatPopulation() {
-        final var response = new StringBuilder();
+    private static String formatPopulation() {
+        return population
+                .map(PopulationWithVavrTests::formatPerson)
+                .mkString(lineSeparator());
+    }
 
-        for (var person : population) {
-            response.append(format("%s %s", person.firstName(), person.lastName()));
+    private static String formatPerson(Person person) {
+        return format("%s %s", person.firstName(), person.lastName()) +
+                (!person.pets().isEmpty() ? formatPets(person) : "");
+    }
 
-            if (!person.pets().isEmpty()) {
-                response.append(" who owns : ");
-            }
-
-            for (var pet : person.pets()) {
-                response.append(pet.name()).append(" ");
-            }
-
-            if (!population.getLast().equals(person)) {
-                response.append(lineSeparator());
-            }
-        }
-        return response;
+    private static String formatPets(Person person) {
+        return List.ofAll(person.pets())
+                .map(Pet::name)
+                .mkString(" who owns : ", " ", " ");
     }
 
     @Test
     void whoOwnsTheYoungestPet() {
-        var filtered = population.stream()
-                .min(comparingInt(PopulationTests::youngestPetAgeOfThePerson))
-                .orElse(null);
-
-        assert filtered != null;
-        assertThat(filtered.firstName()).isEqualTo("Lois");
+        assertThat(population
+                .minBy(PopulationWithVavrTests::youngestPetAgeOfThePerson)
+                .get()
+                .firstName()
+        ).isEqualTo("Lois");
     }
 
-    private static int youngestPetAgeOfThePerson(Person person) {
-        return person.pets()
-                .stream()
-                .mapToInt(Pet::age)
+    private static int youngestPetAgeOfThePerson(Person p) {
+        return List.ofAll(p.pets())
+                .map(Pet::age)
                 .min()
-                .orElse(Integer.MAX_VALUE);
+                .getOrElse(MAX_VALUE);
     }
 }
